# nti-eta-ai

./: .envrc  .gitignore  .python-version  jupyter  pyproject.toml
project/: Pneumonia_Detection.py  Untitled-1.ipynb  Untitled-2.ipynb  main.py  pneumonia.ipynb  setup
s01/: intro.py
s02/: numpy.ipynb  numpylib.py
s03/: csv_handle.py  data.csv  matinv.py  preprocessing.py  task.py  test.csv  testaaaaa.xlsx
s04/: Untitled.ipynb  task1.py  task2.py  task3.py  vision.py
s05/: LinearRegressionCode.ipynb  LogisticRegressionCode.ipynb  diabetes.py  insurance.py  titanic.py
s06/: Linear_SVM_code 2 two classes.ipynb  Linear_SVM_code.ipynb  Poly_SVM_code.ipynb  RBF_SVM_code.ipynb  SVM.pptx  SVM_Code.ipynb  SVR_code.ipynb  Untitled.ipynb  classification.py
s07/: KNN+Naive.pptx  KNN_code.ipynb  naive bayes.pptx  naive_bayes.ipynb  naive_bayes.py  naive_bayes_1_titanic_survival_prediction.ipynb
s08/: Kmeans code.ipynb  kmeans.pptx  task.ipynb
s09/: CNN_code classification.ipynb  DS.rar  val.rar
s10/: DenseNet121_Model.ipynb  MobileNet.ipynb  MobileNetV2_Code .ipynb  bbb.py  mmm.py
s11/: Lstm_code2.ipynb  lstm.ipynb  rnn.ipynb  rnn2.ipynb
s12/: Apple DS.rar  SVM_ClassifierCode.ipynb  pca.ipynb  svm_classifier.ipynb
sessions/: optimization.pptx
