[project]
name = "nti-eta-ai"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "kagglehub>=0.3.12",
    "keras>=3.10.0",
    "kneed>=0.8.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "tensorflow>=2.19.0",
]
